# photography

./: .dockerignore  .gitignore  next.config.ts  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  booking.rs  client.rs  clientele.rs  invoicing.rs  main.rs  photo_file_ops.rs
backend/src/invoicing/: invoice.rs  invoice_generation.rs  mod.rs
production/: backend_build.sh  backend_docker.sh  frontend_docker.sh
src/_utilities/: API_UTILS.ts  us_states.json
src/app/: Providers.tsx  anaglyph_shadow.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/about/: page.tsx
src/app/admin/booking/: page.tsx
src/app/admin/booking/find/: page.tsx
src/app/admin/booking/pending/: page.tsx
src/app/admin/booking/pending/components/: booking_request_preview.tsx
src/app/admin/booking/view/[booking_id]/: page.tsx
src/app/admin/booking_requests/: page.tsx
src/app/admin/booking_requests/components/: view_booking_request.tsx
src/app/admin/clientele/: page.tsx
src/app/admin/clientele/create/: page.tsx
src/app/admin/clientele/edit/[client_id]/: page.tsx
src/app/admin/clientele/find/: page.tsx
src/app/admin/clientele/view/[client_id]/: page.tsx
src/app/admin/invoicing/: page.tsx
src/app/admin/invoicing/create/: create_invoice.css  page.tsx
src/app/admin/invoicing/edit/[invoice_id]/: page.tsx
src/app/admin/invoicing/find/: page.tsx
src/app/admin/invoicing/view/[invoice_id]/: page.tsx
src/app/admin/login/: page.tsx
src/app/booking/: page.tsx
src/app/booking_form/: page.tsx
src/app/booking_requests/: page.tsx
src/app/booking_requests/components/: view_booking_request.tsx
src/app/contact/: page.tsx
src/app/gallery/: page.tsx
src/app/gallery/[category]/: page.tsx
src/app/gallery/[category]/_components/: display_photos.tsx
src/app/gallery/_components/: categoryselection.tsx  popup_hint.tsx
src/app/invoices/: page.tsx
src/app/invoices/create/: page.tsx
src/app/login/: page.tsx
src/app/pending_bookings/: page.tsx
src/app/pending_bookings/components/: view_booking_request.tsx
src/app/pricing/: page.tsx
src/components/: AuthContext.tsx  AuthGaurd.tsx  AuthGuard.tsx  pixelatedGrid.tsx
src/components/ui/: animatedButton.tsx  marbledbutton.tsx  navbar.tsx
