[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.10.0-rc.0"
tokio-util = { version = "0.7.16", features = ["io"] }
tower-http = { version = "0.6.6", features = ["full"] }
image = { version = "0.25.8", features = ["avif", "avif-native"] }
bytes = "1.10.1"


