[package]
name = "photography_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.10.0-rc.0"
tower-http = { version = "0.6.6", features = ["full"] }
rust_decimal = "1.33"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "rust_decimal", "time", "macros", "postgres", "tls-native-tls"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
argon2 = "0.5.3"
time = "0.3.44"