[package]
name = "photography_backend"
version = "0.1.0"
edition = "2024"

[build-dependencies]
typst-bake = "0.1"
[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.10.0-rc.0"
tower-http = { version = "0.6.6", features = ["full"] }
rust_decimal = "1.39.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "rust_decimal", "time", "macros", "postgres", "tls-native-tls"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
argon2 = "0.5.3"
time = { version = "0.3.44", features = ["serde", "formatting"] }
reqwest = { version = "0.13.1", features = ["form", "json"] }
http = "1.3.1"
typst-pdf = "0.14.2"
typst = "0.14.2"
typst-as-lib = { version = "0.15.1", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
serde_json = "1.0.149"
chrono = "0.4.43"
chrono-tz = "0.10.4"

typst-bake = "0.1.4"
[package.metadata.typst-bake]
template-dir = "./src/invoicing/typst"  # Path to your .typ files and assets
fonts-dir = "./src/invoicing/typst/fonts"         # Path to your font files